--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.2",
         "darkaonline/l5-swagger": "^8.6",
+        "dompdf/dompdf": "^2.0",
         "laravel/framework": "^11.0",
         "laravel/passport": "^12.0",
         "laravel/tinker": "^2.9"
